[package]
name = "gfx_window_sdl2"
version = "0.2.0"
authors = ["snorr <snorredc@gmail.com>"]
description = "Use gfx rendering with SDL2 windows"
repository = "https://github.com/snorr/gfx_window_sdl2"
keywords = ["SDL", "gamedev", "gfx", "graphics"]
license = "MIT"

[dependencies]
gfx = "0.8.1"
gfx_device_gl = "0.7.0"
sdl2 = "0.12.1"
